# beff

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  a.ts  insta.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.base.json
.changeset/: moody-mugs-clean.md  twenty-poets-compete.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: deploy.yml  publish.yml  publish.yml.bak  tests.yml
dev-templates/tailadmin/: package.json
docs/: README.md  req-csj-esm-compat-improve.md
e2e-tests/bug-rust-repro/: beff.json  package.json
e2e-tests/codegen-tests/: CHANGELOG.md  beff.json
e2e-tests/codegen-v2/: package.json
e2e-tests/custom-formats/: CHANGELOG.md  beff.json  package.json
e2e-tests/json-schema/: CHANGELOG.md  package.json
e2e-tests/openapi-schema/: CHANGELOG.md  beff.json  package.json
e2e-tests/standalone-parser/: CHANGELOG.md  beff.json  package.json
e2e-tests/ts-describe/: CHANGELOG.md  beff.json  package.json
e2e-tests/ts-describe-2/: CHANGELOG.md  beff.json  package.json
examples/: README.md
examples/bug-rust-repro/: CHANGELOG.md  beff.json  package.json
examples/d1-northwind/: README.md
examples/example-blog/: package.json
examples/hono-blog/: .gitignore  package.json  tsconfig.json  wrangler.example.toml
examples/minimal-react/: CHANGELOG.md  README.md  beff.json  package.json
examples/node-docs/: CHANGELOG.md  index.ts  package.json  router.ts
examples/node-server/: CHANGELOG.md  README.md  (+2 more)
(+144 files in other folders)
